# duplo_v1

./: CMakeLists.txt  README.md  duplov1.vcg  manifest.xml
include/: cluster.h  cluster.h~  find_extents.h  incontact.h  manipulator.h  manipulator_try.h  manipulator_try.h~  manipulator_try_Jan21.h  move_arm.h  move_arm_spread.h  pass_through_gen.h  pcd_from_kinect.h  pick_n_place.h  pick_n_place_alt.h  planar_seg.h  process_pcd.h  process_pcd_alt.h  process_pcd_alt.h~  process_pcd_naive.h  robot_head.h  set_boundaries.h  spread.h  spread_try.h  tumble.h
launch/: duplov1.launch  duplov1.launch~  duplov1_naive.launch  grasp_cluster_planner.launch  pp.launch  pp.launch~  tumble.launch  tumble.launch~  tumble1.launch~
msg/: VecPointCloud.msg
src/: cluster.cpp  cluster.cpp~  find_extents.cpp  find_longest_dim.cpp  ik_trajectory_tutorial.cpp  ik_trajectory_tutorial.cpp~  incontact.cpp  incontact.cpp~  manipulator.cpp  manipulator_try.cpp  manipulator_try.cpp~  manipulator_try_Jan21.cpp  move_arm.cpp  move_arm_manual.cpp  move_arm_manual2.cpp  move_arm_manual3.cpp  move_head.cpp  move_leftarm_manual3.cpp  pass_through_gen.cpp  pcd_from_kinect.cpp  pcd_utils.cpp  planar_seg.cpp  process_pcd.cpp  process_pcd.cpp~  process_pcd_alt.cpp  process_pcd_alt.cpp~  process_pcd_naive.cpp  process_pcd_naive.cpp~  robot_head.cpp  set_boundaries.cpp
src/duplo_v1/msg/: _VecPointCloud.py  __init__.py
src/duplo_v1/srv/: _ExecuteCartesianIKTrajectory.py  _GetCloudStats.py  _Get_New_PCD.py  _Grasp_Duplo.py  _Manipulate_Duplo.py  _Process_PCD.py  _Spread_Duplo.py  _Tumble_Duplo.py  __init__.py
src/redundant/: find_waypoints.cpp  pass_through.cpp  pcd_from_file.cpp  pick_n_place.cpp  pick_n_place_alt.cpp  pick_place_try.cpp  place_duplo.cpp  process_pcd_server.cpp  set_pickup_goal.cpp  spread_server.cpp  spread_try.cpp  tumble_server.cpp
srv/: GetCloudStats.srv  Get_New_PCD.srv  Grasp_Duplo.srv  Manipulate_Duplo.srv  Process_PCD.srv  Spread_Duplo.srv  Tumble_Duplo.srv
